Revision history for autodie

1.998 Sat Jan  3 11:19:53 AUSEDT 2009

        * BUILD: Removed Module::AutoInstall, which previously
          was loaded but not used, but currently doesn't actually
          do what we want.

        * TEST: We manually stringify $@ for one test in
          exception_class.t to avoid a bug involving overloaded
          classes containing apostrophies.

        * TEST: unlink.t and mkdir.t avoid changing directories,
          which could cause spurious failures when @INC includes
          paths relative to the current working directory.

        * DOCUMENTATION: Spurious "used only once" messages are
          documented in Fatal's documentation (as well as autodie's).

        * TEST: truncate.t has been updated to avoid incorrect
          test failures on VMS machines.  Many thanks to Craig A
          Berry for the bug report and fix.  (RT #42110)

1.997 Thu Dec  4 15:14:00 AUSEDT 2008
        * TEST: Test::More 0.86 (and possibly 0.85) appears to
          dislike package names that contain the apostrophe
          character (these occur in some tests for Klingon
          localisation).  We now skip these tests on systems
          with Test::More >= 0.85 installed.

1.996 Thu Dec  4 09:07:39 AUSEDT 2008
        * FEATURE: Child classes can now provide an exception_class()
          method that returns the desired exception class, rather
          than over-riding the whole throw() method.  Existing classes
          that over-ride throw() will still work as before.

        * BUGFIX: Fixed a bug where multiple autodie-derived classes
          would share the same subroutine cache.  This could result
          in excptions from the wrong class being thrown.

          This bug did not affect programs which used only autodie,
          or a single autodie-derived class.

        * BUGFIX: Missing 1.995 version tag added to export list.

        * TEST: Make sure that we always have a working version tag for