@@ -1,5 +1,9 @@
 Revision history for autodie
 
+        * TEST: Added test for correct caller output on
+          autodie::exception objects.  Thanks to Piers Harding
+          for spotting this bug at KiwiFoo.
+
 1.998 Sat Jan  3 11:19:53 AUSEDT 2009
 
         * BUILD: Removed Module::AutoInstall, which previously
